[tool.poetry]
name = "run_as_task"
version = "0.1.4"
description = "`run_as_task` is a Python package that allows scripts to escalate their privileges to Administrator (Local Service) without requiring UAC approval."
authors = ["th yoo <taihyungyoo@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/th-yoo/run_as_task"
keywords = ["admin", "windows", "elevation", "privileges", "task scheduler"]

[tool.poetry.dependencies]
python = "^3.9"
pywin32 = {version = ">= 300", platform = "win32"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
